--- a/link-style.css
+++ b/link-style.css
@@ -76,10 +76,11 @@ body {
     height: 100%;
     padding: 20px;
     margin: 10px;
-    background-color: #fff;
+    background: inherit;
     border-radius: 15px;
 }
 .btnLink:before {
+    background: inherit;
     box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
     filter: blur(10px);
 }
