--- a/link-style.css
+++ b/link-style.css
@@ -80,7 +80,7 @@ body {
     border-radius: 15px;
 }
 .btnLink:before {
-    background: inherit;
+    background: #fff;
     box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
     filter: blur(10px);
 }
