--- a/log.css
+++ b/log.css
@@ -11,6 +11,10 @@ body {
     background-color: black;
 }
 .box {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding: 15px;
     margin: 5px;
     border-radius: 15px;
