--- a/link-style.css
+++ b/link-style.css
@@ -156,7 +156,7 @@ i {
 .window {
     width: 250px;
     height: 140px;
-    color: #fff;
+    color: #b0f0f0;
     background-color: rgba(255, 255, 255, .15);  
     backdrop-filter: blur(5px);
     border-radius: 10px;
